fixed clock alignment to center it

--- a/css/default.css
+++ b/css/default.css
@@ -11,6 +11,6 @@ h1 {
 }
 
 #clock {
-	margin-top: 50px;
-	font-size: 50px;
+	margin-top: 280px;
+	font-size: 70px;
 }
